--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,21 @@
-# 0. UTF-8 ??
+# 0. UTF-8 세팅
 server.servlet.encoding.charset=utf-8
 server.servlet.encoding.force=true 
 
-# 1. DB ??
+# 1. DB 세팅
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.username=sa
 
-# 2. hibernate ??
+# 2. hibernate 세팅
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
-# 3. ????? ??
+# 3. 더미데이터 세팅
 spring.sql.init.data-locations=classpath:db/data.sql
-
 spring.jpa.defer-datasource-initialization=true 
+
+
+# 4. mustache에서 request와 session에 접근할 수 있도록 설정
+spring.mustache.servlet.expose-session-attributes=true
+spring.mustache.servlet.expose-request-attributes=true
